httpbin-gateway.yaml
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#  name: istio-egressgateway
#  namespace: istio-system
# spec:
#  selector:
#    istio: egressgateway
#  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    hosts:
#    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - httpbin.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.local
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: external-svc
# spec:
#   hosts:
#   - "*"
#   location: MESH_EXTERNAL
#   ports:
#   - number: 80
#     name: http
#     protocol: HTTP
#   resolution: NONE
