kiali.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kiali.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
