reverse-proxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reverse-proxy

---
# apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
  namespace: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.2-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: nginx
          protocol: TCP
          containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   namespace: reverse-proxy
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: "*.local"
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: nginx-service
#           servicePort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "*.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
